test/error/syntax/ending_semi.kat
func main(argc: int, argv: str) => int {
  let i: int
}
